<resources>
    <string name="app_name">SaloonSearch</string>
    <string name="activity_login_usertype">User Type</string>
    <string name="activity_login_username">Username</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_saloonname">Saloon Name</string>
    <string name="activity_login_sign_up">Sign Up</string>
    <string name="activity_login_sign_in">Sign In</string>
    <string name="activity_login_sign_up_prompt">Yet to create an Account?</string>
    <string name="activity_login_sign_in_prompt">Already have an Account?</string>

    <string-array name="activity_login_usertype">
        <item>Saloon Owner</item>
        <item>Saloon User</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>Febuary</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_appointment_create_appointment">Create Appointment</string>
    <string name="fragment_appointment_no_appointments_set">No Appointments Set</string>
</resources>
